--- a/lib/ss/Makefile.in
+++ b/lib/ss/Makefile.in
@@ -164,7 +164,7 @@ test_ss: test_ss.o test_cmd.o $(DEPLIBSS) $(DEPLIBCOM_ERR)
 
 check:: all test_ss
 	$(E) "	RUN TEST test_ss"
-	-@(LD_LIBRARY_PATH=$(LIB) DYLD_LIBRARY_PATH=$(LIB) ./test_ss -f $(srcdir)/test_script > test_out 2>&1; exit 0)
+	-@($(TESTENV) ./test_ss -f $(srcdir)/test_script > test_out 2>&1; exit 0)
 	$(Q) if diff test_out $(srcdir)/test_script_expected > test.diff; then \
 		true ; else echo "Regression test for ss library failed!"; exit 1 ; fi
 
