--- a/resize/Makefile.in
+++ b/resize/Makefile.in
@@ -92,8 +92,7 @@ uninstall:
 	done
 
 test_extent.out: test_extent $(srcdir)/test_extent.in
-	LD_LIBRARY_PATH=$(LIB) DYLD_LIBRARY_PATH=$(LIB) ./test_extent < $(srcdir)/test_extent.in \
-		> test_extent.out
+	$(TESTENV) ./test_extent < $(srcdir)/test_extent.in > test_extent.out
 
 check:: test_extent.out
 	$(Q) if cmp -s test_extent.out $(srcdir)/test_extent.in ; then \
