compile_et: Allow user to override ET_DIR
Signed-off-by: Michael Forney <forney@google.com>
Signed-off-by: Theodore Ts'o <tytso@mit.edu>

--- a/lib/et/compile_et.sh.in
+++ b/lib/et/compile_et.sh.in
@@ -5,7 +5,7 @@
 datarootdir=@datarootdir@
 AWK=@AWK@
 DIR="${DIR-@datadir@/et}"
-ET_DIR="@ET_DIR@"
+ET_DIR="${ET_DIR-@ET_DIR@}"
 
 if test "$1" = "--build-tree" ; then
     shift;
